# EVM-labs

lab-1/: EVM lab1.doc  лаб1.xlsx
lab-2/: lab2.docx  lab2.xlsx  Новый текстовый документ.txt
lab-3/: lab-3-report.docx  lab3--t-O0-txt.txt  lab3--t-O0.s  lab3--t-O1-txt.txt  lab3--t-O1.s  lab3--t-O2-txt.txt  lab3--t-O2.s  lab3--t-O3-txt.txt  lab3--t-Ofast-txt.txt  lab3--t-Os.s
lab-4/: lab4-C-code-html.html  lab4-C-code.txt  lab4-O0-arm-code-html.html  lab4-O0-arm-code.txt  lab4-O0-arm-comment.txt  lab4-O2-arm-code.txt  lab4-O2-arm-comment.txt  lab4-O2-code-html.html  lab4-report.docx
lab-5/: CMakeLists.txt  lab-5-report.docx  main.cpp  twin-windows.cpp
lab-6/: lab-6-report.docx  main.html
lab-7/: BLAS.html  lab-7-report.docx  main.html  vect.html
lab-8/: graphic.xlsx  lab-8-report.docx  log.txt  main.cpp  main.html  mem.txt  ticks.txt  ~$b-8-report.docx
lab-9/: avg_time_log (2).txt  avg_time_log (3).txt  avg_time_log.txt  graphic.xlsx  lab-9-report.docx  main.html
